Fixed the Rankbar to shift on hover. And fully established a working loadstate

--- a/src/index.css
+++ b/src/index.css
@@ -764,6 +764,8 @@ li {
   display: flex;
   justify-content: center;
 }
+
+.anime__first-4--content .anime-card__skeleton,
 .anime__first-4--content .anime-card {
   max-width: 240px;
   width: 25%;
@@ -776,42 +778,35 @@ li {
   flex-wrap: wrap;
 }
 
-
-
-.anime-card__skeleton {
-  display: flex;
-  aspect-ratio: 148.57/279.19;
-  flex-direction: column;
-}
-
-
 .anime-card__skeleton,
 .anime-card {
-  width: 18%;
-  max-width: 200px;
+  width: 100%;
+  height: 100%;
+  max-width: 176px;
   border-radius: 20px 20px 8px 8px;
   overflow: hidden;
   box-shadow: 0 4px 8px #00000085;
   margin: 20px 8px;
 }
 
+.anime-card__skeleton--img {
+  width: 105.26%;
+  
+}
 
+.anime-card__skeleton--img,
+.anime-card__img {
+  object-fit: contain;
+  transition: all 600ms ease;
+  transform: scale(1.2);
+}
 
 .anime-card__img {
   width: 100%;
-  object-fit: contain;
-  transform: scale(1.2);
-  transition: all 600ms ease;
 }
 
-.anime-card__skeleton--cover {
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(90deg, #ddd 0px, #e8e8e8 50%, #ddd 100%);
-  /* background-size: 200% 100%; */
-  aspect-ratio: 148.94/228.49;
-  animation: pulse 1.5s infinite linear;
-}
+
+.anime-card__skeleton--img-wrapper,
 .anime-card__img--wrapper {
   width: 100%;
   overflow: hidden;
@@ -825,6 +820,15 @@ li {
 .anime-card__img--wrapper:hover .anime-card__cover {
   opacity: 1;
 }
+
+.anime-card__skeleton--cover {
+  background-color: #ddd;
+  background-image: linear-gradient(90deg, #6471bb 0px, #7281d2 50%, #6471bb 100%);
+  background-size: 200% 100%;
+  animation: pulse 1.5s infinite linear;
+}
+
+.anime-card__skeleton--cover,
 .anime-card__cover {
   position: absolute;
   width: 100%;
@@ -832,9 +836,12 @@ li {
   left: 0;
   right: 0;
   bottom: 0;
+  transition: all 300ms ease;
+}
+
+.anime-card__cover {
   background-color: #1a0441b4;
   opacity: 0;
-  transition: all 300ms ease;
 }
 
 .anime-card__img--wrapper:hover .anime-card__desc {
@@ -842,6 +849,7 @@ li {
   transform: translate(-50%, -50%);
   opacity: 1;
 }
+
 .anime-card__desc {
   position: absolute;
   width: 100%;
@@ -860,18 +868,7 @@ li {
   opacity: 0;
   transition: all 600ms ease;
 }
-
-
-
-
-.anime-card__skeleton--title {
-  width: 100%;
-  /* height: 3.7em; */
-  background-color: #b1c0ed;
-  aspect-ratio: 148.94/51.25;
-}
-
-
+.anime-card__skeleton--title,
 .anime-card__title {
   background-color: #b1c0ed;
   width: 100%;
@@ -935,19 +932,25 @@ li {
   padding: 16px 32px;
   padding-bottom: 24px;
 }
+
+.anime__rank-bar--skeleton,
 .anime__rank-bar {
-  /* background-color: blue; */
   margin: 8px 0;
   display: flex;
   align-items: center;
 }
+
+.anime__rank--skeleton,
 .anime__rank {
   width: 20%;
 }
+
+.rank__img--skeleton,
 .rank__img {
   width: 100%;
   object-fit: contain;
 }
+.rank__img--wrapper--skeleton,
 .rank__img--wrapper {
   position: relative;
   width: 100%;
@@ -957,14 +960,31 @@ li {
   box-shadow: -2px 0px 8px 4px #5d6ae27e;
 
 }
+
+.rank__img--cover--skeleton {
+  transform: rotate(45deg) scale(1.3);
+  background-size: 200% 100%;
+  background-image: linear-gradient(90deg, #6471bb 0px, #7281d2 50%, #6471bb 100%);
+  animation: pulse 3s infinite linear;
+
+}
+
+.skeleton__spinner {
+  color: rgba(255, 255, 255, 0.539);
+}
+
+.rank__img--cover--skeleton,
 .rank__img--cover {
-  background-color: #00000085;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
 }
+.rank__img--cover {
+  background-color: #00000085;
+}
+.rank__number--skeleton,
 .rank__number {
   position: absolute;
   font-size: 32px;
@@ -975,16 +995,31 @@ li {
   transform: translate(-50%, -50%);
   transition: all 300ms ease;
 }
+
+.rank__title--skeleton {
+  background-size: 200% 100%;
+  background-image: linear-gradient(90deg, #ac8ae4 0px, #8264b3 50%, #ac8ae4 100%);
+  animation: pulse 3s infinite linear;
+}
+
+.rank__title--skeleton,
 .rank__title {
-  padding: 8px 12px;
-  background-color: #ac8ae4;
-  box-shadow: 4px 4px 8px 4px #5d6ae27e;
+  display: flex;
+  align-items: center;
   width: 80%;
+  background-color: #ac8ae4;
   border-radius: 0 8px 8px 0;
+  box-shadow: 4px 4px 8px 4px #5d6ae27e;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: 0.04em;
+  overflow: hidden;
+  white-space: nowrap;
   transition: all 300ms ease;
+  padding: 8px 12px;
+}
+.rank__title--text {
+  transition: transform 5s ease;
 }
 .anime__rank-bar:hover .rank__title {
   background-color: #8e4bfa;
@@ -992,6 +1027,10 @@ li {
 }
 .anime__rank-bar:hover .rank__number {
   color: #f3ff45;
+}
+.anime__rank-bar:hover .rank__title--text {
+  transform: translate(-300px);
+  transition: transform 5s ease 450ms;
 }
 /* #endregion */
 
@@ -1692,6 +1731,14 @@ li {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@keyframes pulse {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
   }
 }
 /* #endregion */
